Página TV y casa terminada

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <div class="container">
         <div class="container2">
             <picture>
-                <source srcset="images/hero__dbphk49ymi2q_large.jpg" media="(min-width: 768)">
-                <source srcset="images/hero__dbphk49ymi2q_medium.jpg" media="(min-width: 481)">
-                <source srcset="images/hero__dbphk49ymi2q_small_2x.jpg" media="(min-width: 320)">
+                <source srcset="images/hero__dbphk49ymi2q_large.jpg">
+                <source srcset="images/hero__dbphk49ymi2q_medium.jpg">
+                <source srcset="images/hero__dbphk49ymi2q_small_2x.jpg">
                 <img src="images/hero__dbphk49ymi2q_large.jpg" alt="altavoces">
             </picture>
             <h1>El futuro llama a tu puerta.</h1>
@@ -37,4 +37,4 @@
 
 </html>
 
-</html>
+</html> 
