Tv y casa hecho

--- a/index.html
+++ b/index.html
@@ -14,25 +14,11 @@
         <nav>
             <a href="index.html">*LOGO APPLE*</a>
             <a href="">Tienda</a>
-            <a href="tvycasa">TV y casa</a>
+            <a href="tvycasa.html">TV y casa</a>
             <a href="">Iniciar sesión</a>
         </nav>
     </header>
-    <div class="container">
-        <div class="container2">
-            <picture>
-                <source srcset="images/hero__dbphk49ymi2q_large.jpg">
-                <source srcset="images/hero__dbphk49ymi2q_medium.jpg">
-                <source srcset="images/hero__dbphk49ymi2q_small_2x.jpg">
-                <img src="images/hero__dbphk49ymi2q_large.jpg" alt="altavoces">
-            </picture>
-            <h1>El futuro llama a tu puerta.</h1>
-            <p>Conecta tus dispositivos favoritos para disfrutar de un hogar inteligente, cómodo y lleno de diversión.
-                Móntate noches de cine con una calidad de imagen y sonido espectacular. Reproduce canciones desde
-                cualquier rincón. Y controla las luces, las cerraduras y los termostatos con Siri. Siempre con la
-                seguridad y privacidad de Apple.</p>
-        </div>
-    </div>
+    
 </body>
 
 </html>
