Empezada la 2ª parte de Tv y casa

--- a/tvycasa.html
+++ b/tvycasa.html
@@ -33,6 +33,55 @@
                 seguridad y privacidad de Apple.</p>
         </div>
     </div>
+    <section class="seccion1">
+        <div class="container3">
+            <div class="container4">
+                <p>HomePod</p>
+                <h2>La profundidad del sonido.</h2>
+                <p>349€</p>
+                <div class="botoneseccion">
+                    <button class="comprar">Comprar</button>
+                    <button class="masinfo1">Más información</button>
+                </div>
+                <picture>
+                    <source media="(min-width: 1024px)" srcset="images/homepod__eam53jjm772a_medium.jpg">
+                    <source media="(min-width: 768px)" srcset="images/homepod__eam53jjm772a_small.jpg">
+                    <img src="images/homepod__eam53jjm772a_large_2x.jpg" alt="homepod" class="imgseccion">
+                </picture>
+                
+            </div>
+            <div class="container5">
+                <p>HomePod mini</p>
+                <h2>Sonido sorprendente para su tamaño.</h2>
+                <p>109€</p>
+                <div class="botoneseccion">
+                    <button class="comprar">Comprar</button>
+                    <button class="masinfo">Más información</button>
+                </div>
+                <img src="images/room_filling_sound__zagu3551kwyi_large.jpg" alt="homepodmini" class="imgseccion">
+            </div>
+        </div>
+        <div class="container3">
+            <div class="container5">
+                <p>TV 4k</p>
+                <h2>La nueva tele te llama</h2>
+                <p>169€</p>
+                <div class="botoneseccion">
+                    <button class="comprar">Comprar</button>
+                    <button class="masinfo">Más información</button>
+                </div>
+                <img src="images/apple_tv_4k__b30wcqp0pdle_large.jpg" alt="appletv4k" class="imgseccion">
+            </div>
+            <div class="container5">
+                <p>App casa</p>
+                <h2>Los cimientos de un hogar inteligente</h2>
+                <div class="botoneseccion">
+                    <button class="masinfo">Más información</button>
+                </div>
+                <img src="images/homeapp__cpc1k972xys2_large.jpg" alt="homeapp" class="imgseccion">
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
