Pagina TV y Casa terminada(menos los h3)

--- a/tvycasa.html
+++ b/tvycasa.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Apple 2.12</title>
+    <title>Proyecto Apple</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
 </head>
@@ -24,7 +24,7 @@
                 <source srcset="images/hero__dbphk49ymi2q_large.jpg">
                 <source srcset="images/hero__dbphk49ymi2q_medium.jpg">
                 <source srcset="images/hero__dbphk49ymi2q_small_2x.jpg">
-                <img src="images/hero__dbphk49ymi2q_large.jpg" alt="altavoces">
+                <img src="images/hero__dbphk49ymi2q_large.jpg">
             </picture>
             <h1>El futuro llama a tu puerta.</h1>
             <p>Conecta tus dispositivos favoritos para disfrutar de un hogar inteligente, cómodo y lleno de diversión.
@@ -37,44 +37,54 @@
         <div class="container3">
             <div class="container4">
                 <p>HomePod</p>
-                <h2>La profundidad del sonido.</h2>
+                <h3>La profundidad del sonido.</h3>
                 <p>349€</p>
                 <div class="botoneseccion">
                     <button class="comprar">Comprar</button>
                     <button class="masinfo1">Más información</button>
                 </div>
                 <picture>
-                    <source media="(min-width: 1024px)" srcset="images/homepod__eam53jjm772a_medium.jpg">
-                    <source media="(min-width: 768px)" srcset="images/homepod__eam53jjm772a_small.jpg">
+                    <source media="(min-width: 1024px)" srcset="images/homepod__eam53jjm772a_large.jpg">
+                    <source media="(min-width: 768px)" srcset="images/homepod__eam53jjm772a_medium.jpg">
+                    <source media="(min-width: 320px)" srcset="images/homepod__eam53jjm772a_small.jpg">
                     <img src="images/homepod__eam53jjm772a_large_2x.jpg" alt="homepod" class="imgseccion">
                 </picture>
-                
+
             </div>
             <div class="container5">
                 <p>HomePod mini</p>
-                <h2>Sonido sorprendente para su tamaño.</h2>
+                <h3>Sonido sorprendente para su tamaño.</h3>
                 <p>109€</p>
                 <div class="botoneseccion">
                     <button class="comprar">Comprar</button>
                     <button class="masinfo">Más información</button>
                 </div>
-                <img src="images/room_filling_sound__zagu3551kwyi_large.jpg" alt="homepodmini" class="imgseccion">
+                <picture>
+                    <source media="(min-width: 1024px)" srcset="images/room_filling_sound__zagu3551kwyi_medium.jpg">
+                    <source media="(min-width: 768px)" srcset="images/room_filling_sound__zagu3551kwyi_small.jpg">
+                    <img src="images/room_filling_sound__zagu3551kwyi_large.jpg" alt="homepodmini" class="imgseccion">
+                </picture>
+
             </div>
         </div>
         <div class="container3">
             <div class="container5">
                 <p>TV 4k</p>
-                <h2>La nueva tele te llama</h2>
+                <h3>La nueva tele te llama</h3>
                 <p>169€</p>
                 <div class="botoneseccion">
                     <button class="comprar">Comprar</button>
                     <button class="masinfo">Más información</button>
                 </div>
-                <img src="images/apple_tv_4k__b30wcqp0pdle_large.jpg" alt="appletv4k" class="imgseccion">
+                <picture>
+                    <source media="(min-width: 1024px)" srcset="images/apple_tv_4k__b30wcqp0pdle_medium.jpg">
+                    <source media="(min-width: 768px)" srcset="images/apple_tv_4k__b30wcqp0pdle_small.jpg">
+                    <img src="images/apple_tv_4k__b30wcqp0pdle_large.jpg" alt="appletv4k" class="imgseccion">
+                </picture>
             </div>
             <div class="container5">
                 <p>App casa</p>
-                <h2>Los cimientos de un hogar inteligente</h2>
+                <h3>Los cimientos de un hogar inteligente</h3>
                 <div class="botoneseccion">
                     <button class="masinfo">Más información</button>
                 </div>
@@ -86,4 +96,4 @@
 
 </html>
 
-</html> 
+</html>
