--- a/tvycasa.html
+++ b/tvycasa.html
@@ -21,9 +21,8 @@
     <div class="container">
         <div class="container2">
             <picture>
-                <source srcset="images/hero__dbphk49ymi2q_large.jpg">
-                <source srcset="images/hero__dbphk49ymi2q_medium.jpg">
-                <source srcset="images/hero__dbphk49ymi2q_small_2x.jpg">
+                <source media="(min-width: 1024px)" srcset="images/hero__dbphk49ymi2q_medium.jpg">
+                <source media="(min-width: 768px)" srcset="images/hero__dbphk49ymi2q_small_2x.jpg">
                 <img src="images/hero__dbphk49ymi2q_large.jpg">
             </picture>
             <h1>El futuro llama a tu puerta.</h1>
@@ -88,7 +87,11 @@
                 <div class="botoneseccion">
                     <button class="masinfo">Más información</button>
                 </div>
-                <img src="images/homeapp__cpc1k972xys2_large.jpg" alt="homeapp" class="imgseccion">
+                <picture>
+                    <source media="(min-width: 1024px)" srcset="images/homeapp__cpc1k972xys2_medium.jpg">
+                    <source media="(min-width: 768px)" srcset="images/homeapp__cpc1k972xys2_small.jpg">
+                    <img src="images/homeapp__cpc1k972xys2_large.jpg" alt="homeapp" class="imgseccion">
+                </picture>
             </div>
         </div>
     </section>
