Pagina principal hecha

--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
             <a href="">Iniciar sesión</a>
         </nav>
     </header>
-    
+    <div class="containerbg1">
+
+    </div>
+    <div class="containerbg2">
+        <h2 class="titulo3">iPhone 15 Pro.</h2>
+        <h3 class="titulo4">Titano. Tan robusto. Tan ligero. Tan Pro</h3>
+    </div>
 </body>
 
 </html>
