--- a/tvycasa.html
+++ b/tvycasa.html
@@ -25,8 +25,8 @@
                 <source media="(min-width: 768px)" srcset="images/hero__dbphk49ymi2q_small_2x.jpg">
                 <img src="images/hero__dbphk49ymi2q_large.jpg">
             </picture>
-            <h1>El futuro llama a tu puerta.</h1>
-            <p>Conecta tus dispositivos favoritos para disfrutar de un hogar inteligente, cómodo y lleno de diversión.
+            <h1 class="titulo1">El futuro llama a tu puerta.</h1>
+            <p class="parrafo1">Conecta tus dispositivos favoritos para disfrutar de un hogar inteligente, cómodo y lleno de diversión.
                 Móntate noches de cine con una calidad de imagen y sonido espectacular. Reproduce canciones desde
                 cualquier rincón. Y controla las luces, las cerraduras y los termostatos con Siri. Siempre con la
                 seguridad y privacidad de Apple.</p>
@@ -35,9 +35,9 @@
     <section class="seccion1">
         <div class="container3">
             <div class="container4">
-                <p>HomePod</p>
-                <h3>La profundidad del sonido.</h3>
-                <p>349€</p>
+                <p class="parrafo1">HomePod</p>
+                <h3 class="titulo2">La profundidad del sonido.</h3>
+                <p class="parrafo1">349€</p>
                 <div class="botoneseccion">
                     <button class="comprar">Comprar</button>
                     <button class="masinfo1">Más información</button>
@@ -51,9 +51,9 @@
 
             </div>
             <div class="container5">
-                <p>HomePod mini</p>
-                <h3>Sonido sorprendente para su tamaño.</h3>
-                <p>109€</p>
+                <p class="parrafo1">HomePod mini</p>
+                <h3 class="titulo2">Sonido sorprendente para su tamaño.</h3>
+                <p class="parrafo1">109€</p>
                 <div class="botoneseccion">
                     <button class="comprar">Comprar</button>
                     <button class="masinfo">Más información</button>
@@ -68,9 +68,9 @@
         </div>
         <div class="container3">
             <div class="container5">
-                <p>TV 4k</p>
-                <h3>La nueva tele te llama</h3>
-                <p>169€</p>
+                <p class="parrafo1">TV 4k</p>
+                <h3 class="titulo2">La nueva tele te llama</h3>
+                <p class="parrafo1">169€</p>
                 <div class="botoneseccion">
                     <button class="comprar">Comprar</button>
                     <button class="masinfo">Más información</button>
@@ -82,8 +82,8 @@
                 </picture>
             </div>
             <div class="container5">
-                <p>App casa</p>
-                <h3>Los cimientos de un hogar inteligente</h3>
+                <p class="parrafo1">App casa</p>
+                <h3 class="titulo2">Los cimientos de un hogar inteligente</h3>
                 <div class="botoneseccion">
                     <button class="masinfo">Más información</button>
                 </div>
